<resources xmlns:tools="http://schemas.android.com/tools">

    <string-array name="emailType">
        <item>\@126.com</item>
        <item>\@139.com</item>
        <item>\@163.com</item>
        <item>\@188.com</item>
        <item>\@189.com</item>
        <item>\@88.com</item>
        <item>\@aol.com</item>
        <item>\@aliyun.com</item>
        <item>\@email.com</item>
        <item>\@foxmail.com</item>
        <item>\@gmail.com</item>
        <item>\@gmx.com</item>
        <item>\@googlemail.com</item>
        <item>\@hotmail.com</item>
        <item>\@icloud.com</item>
        <item>\@inbox.com</item>
        <item>\@live.com</item>
        <item>\@mail.com</item>
        <item>\@mail.ru</item>
        <item>\@msn.com</item>
        <item>\@naver.com</item>
        <item>\@proton.me</item>
        <item>\@qq.com</item>
        <item>\@sina.com</item>
        <item>\@sogou.com</item>
        <item>\@sohu.com</item>
        <item>\@tuta.com</item>
        <item>\@walla.com</item>
        <item>\@web.de</item>
        <item>\@yahoo.com</item>
        <item>\@yahoo.com.cn</item>
        <item>\@yandex.ru</item>
        <item>\@yeah.net</item>
    </string-array>

    <string-array name="articleFeedback">
        <item>表述不清</item>
        <item>内容啰嗦</item>
        <item>语法错误</item>
        <item>逻辑混乱</item>
        <item>前后矛盾</item>
        <item>缺少佐证</item>
    </string-array>

    <string name="app_name">CreeZen</string>
    <string name="prompt">选择城市</string>
    <string name="all_info_check">有关键信息未正确填写，请检查！</string>
    <string name="choose_fill">可选</string>
    <string name="nickname_hint">昵称长度最少一位，最长不超过八位！</string>
    <string name="register">点击注册</string>
    <string name="login_name">123456</string>
    <string name="login_password">123456</string>
    <string name="show_history">查看历史</string>
    <string name="new_record">新建记录</string>
    <string name="pocket_book">记账本</string>
    <string name="pocket">记账本</string>
    <string name="select_file">选择文件</string>
    <string name="please_select_file">请选择需要上传的文件…</string>
    <string name="resource_descript">资源描述</string>
    <string name="find_password">找回密码</string>
    <string name="create_role">创建账号</string>
    <string name="login">点击登录</string>
    <string name="password">密码</string>
    <string name="account">账号</string>
    <string name="from_6_to_18">账户名长度为6至18位</string>
    <string name="feedback">建言献策</string>
    <string name="feedback_type">反馈类型</string>
    <string name="feedback_content">详细内容</string>
    <string name="total">总计</string>
    <string name="record">记录</string>
    <string name="input_add_player">输入要添加的玩家…</string>
    <string name="exist">立即退出</string>
    <string name="history_timeline">时光切片</string>
    <string name="local_tool">百宝工具</string>
    <string name="knowledge_share">学习交流</string>
    <string name="resource_share">资源共享</string>
    <string name="send_message">发送消息</string>
    <string name="unknow_user">未知用户</string>
    <string name="user_manage_sys">用户管理系统</string>
    <string name="register_time">加入时间</string>
    <string name="user_id">用户ID</string>
    <string name="delete_user">删除该用户</string>
    <string name="fans">粉丝数</string>
    <string name="nothing_to_show">什么东西也没有…</string>
    <string name="hub">论坛</string>
    <string name="set_as_admin">设为管理员</string>
    <string name="delete">删除</string>
    <string name="synergy">群编共创</string>
    <string name="hint_synergy">输入想查找的标题、内容、作者…</string>
    <string name="toolbar">ToolBar</string>
    <string name="maze">迷宫</string>
    <string name="gomoku">五子棋</string>
    <string name="pocket_title">账本标题</string>
    <string name="max_length_15">长度不超过15…</string>
    <string name="title">title</string>
    <string name="join_player">参与用户</string>
    <string name="todo">TODO</string>
    <string name="message_hint">消息提示</string>
    <string name="warn_message">提示消息</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="follow_person">关注的人</string>
    <string name="article_number">投稿数</string>
    <string name="set_to_admin">设为管理员</string>
    <string name="userID">用户ID</string>
    <string name="create_time">创建时间</string>
    <string name="get_support">获得的赞</string>
    <string name="against_gain">收到的踩</string>
    <string name="number_user_report">举报人次</string>
    <string name="reported_num">被举报次数</string>
    <string name="role_id_exist">用户名已存在，请重试</string>
    <string name="nickname">昵称</string>
    <string name="nickname_no_blank">昵称不可包含空格！</string>
    <string name="input_password">输入密码</string>
    <string name="password_length_6_18">密码长度为6–18位</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_not_equal">两次密码不一致，请修改…</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="phone_number">手机号</string>
    <string name="address">地址</string>
    <string name="self_intro">自我介绍</string>
    <string name="input_feedback_content">请输入反馈的内容…</string>
    <string name="submit">提交</string>
    <string name="feedback_title">反馈标题</string>
    <string name="jump_3d_game">跳转3D</string>
    <string name="add_symbol">+</string>
    <string name="zero">0</string>
    <string name="line">-</string>
    <string name="input_user_name">输入玩家名称</string>
    <string name="intro_file">请介绍一下你分享的资源！（必填）</string>
    <string name="use_description">使用说明</string>
    <string name="description_option">给大家介绍一下你对资源的描述…（非必填）</string>
    <string name="upload_file">上传文件</string>
    <string name="id">ID</string>
    <string name="folllow">关注</string>
    <string name="user_manage">用户管理</string>
    <string name="base_info">基本信息</string>
    <string name="creation_live">创作动态</string>
    <string name="click_to_fill_info">点我完善信息</string>
    <string name="age">年龄</string>
    <string name="money">资产</string>
    <string name="user_live_page_info_default">这是用户的社交动态页</string>
    <string name="score">score</string>
    <string name="chat_health">文明发言</string>
    <string name="scan">扫码</string>
    <string name="senior">校园智库</string>
    <string name="file_station">资源驿站</string>
    <string name="input_title">请输入标题…</string>
    <string name="record_event">记录一下大事件</string>
    <string name="setting">偏好管理</string>
    <string name="input_suggession">请输入你的建议…</string>
    <string name="comment">评论</string>
    <string name="leave_message">留言</string>
    <string name="begin_download">开始下载</string>
    <string name="file_exist_open">文件已存在，是否打开?</string>
    <string name="upload_waiting">正在上传中，请稍等....</string>
    <string name="no_file_select">你还没选择文件哦！</string>
    <string name="get_resource">获取资源</string>
    <string name="support">点赞</string>
    <string name="reply">回复</string>
    <string name="map_trace">全景寻踪</string>
    <string name="max_bio_length">内容长度最长为200…</string>
    <string name="bio_length">%d/200</string>
    <string name="confirm_exit">确定退出登录吗？</string>
    <string name="click_error">点错了</string>
    <string name="begin_scan_qrcode">开始扫描二维码</string>
    <string name="login_success_notify">登录成功通知</string>
    <string name="welcome_user">欢迎您，%1$s</string>
    <string name="invalid_qrcode">无效的二维码链接！！！</string>
    <string name="service_error">服务异常</string>
    <string name="pinyin_search">拼音查询</string>
    <string name="input_chinese_get_pinyin">输入文字获取拼音</string>
    <string name="change_to_pinyi">一键转换</string>
    <string name="no_account_and_create">账号不存在, 点击“创建账号”按钮新建一个吧~</string>
    <string name="password_error">账号或密码错误，请检查后再次尝试！</string>
    <string name="account_login_other_device">账号已在其他设备登录</string>
    <string name="not_support">暂不支持</string>
    <string name="words_to_user">留下给大家的话....</string>
    <string name="send_immediate">立即发送</string>
    <string name="size_file">0 M</string>
    <string name="poker">扑克牌</string>
    <string name="this_is_server">我是主机</string>
    <string name="join_server">我要加入</string>
    <string name="input_server_ipv4">请输入服务端IP地址</string>
    <string name="exit">退出</string>
    <string name="confirm">确认</string>
    <string name="play_video">视频播放</string>
    <string name="click_to_fetch_resource">点我下载资源</string>
    <string name="wait_connection">等待连接中....</string>
    <string name="cheat">吹牛皮</string>
    <string name="landload">斗地主</string>
    <string name="run_fast">跑得快</string>
    <string name="unknown_user">未知用户</string>
    <string name="manager">管理</string>
    <string name="start_date_time">开始时间</string>
    <string name="end_date_time">结束时间</string>
    <string name="date_split">-</string>
    <string name="time_split">:</string>
    <string name="millis_split">.</string>
    <string name="mount_digger">愚公移山</string>
    <string name="report_user">举报</string>
</resources>