<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.jayce.vexis.exchange.media.MediaUploadActivity"/>
        <variable
            name="textSize"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/selectFile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/select_file"/>
        <TextView
            android:id="@+id/selectedFile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textColor="#ff0000"
            android:text="@string/please_select_file"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/resource_descript"
            android:gravity="center"
            android:layout_weight="1"
            android:background="#86F3EFD8"/>
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:hint="@string/intro_file"
            android:gravity="top"
            android:text="@={activity.descTextLivedata}"
            android:background="@drawable/editview_border">
        </EditText>
        <TextView
            android:id="@+id/descriptionLength"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@{textSize}"
            android:textColor="#ff0000"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/use_description"
            android:background="#86F3EFD8"/>
        <EditText
            android:id="@+id/illustrate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="top"
            android:hint="@string/description_option"
            android:background="@drawable/editview_border"/>
        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/upload_file"/>
    </LinearLayout>
</layout>
