<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/ledger"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pocket"/>
            <Button
                android:id="@+id/maze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maze"/>
            <Button
                android:id="@+id/gomoku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gomoku"/>
            <Button
                android:id="@+id/pinyin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pinyin_search"/>
            <Button
                android:id="@+id/quickStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jump_3d_game"/>
        </LinearLayout>
    </LinearLayout>
    <com.jayce.vexis.foundation.view.animator.AnimatorView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>