<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pocket_title"
            android:textSize="20sp"
            android:textColor="#ff0000"/>
        <EditText
            android:id="@+id/titleEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_length_15"
            android:text="@string/title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_player"
            android:textSize="20sp"
            android:textColor="#73FF0000"/>
        <LinearLayout
            android:id="@+id/itemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
        <ImageButton
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/add_player"
            android:scaleType="fitCenter"
            android:background="#F5F5F5"
            android:importantForAccessibility="no"/>
    </LinearLayout>
</layout>