<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/radioGroup">
    <RadioButton
        android:id="@+id/server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_server"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/ipAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/none"
        android:textSize="16sp"/>
    <RadioButton
        android:id="@+id/client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_server"
        android:textSize="12sp"/>
    <EditText
        android:id="@+id/ipInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_8"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/none"
        android:textSize="16sp"
        android:hint="@string/input_server_ipv4"
        android:importantForAutofill="no"
        android:inputType="text"/>
</RadioGroup>