<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/none">
        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/none"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:importantForAccessibility="no"/>
        <LinearLayout
            android:layout_width="@dimen/none"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical">
            <com.jayce.vexis.foundation.ui.block.LevelTextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                app:size="24"
                app:userName="@string/unknow_user"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/id"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/metallicGold"/>
                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/administrator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/user_manage"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp">
        <Button
            android:layout_width="@dimen/none"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/folllow"
            android:gravity="center"/>
        <Button
            android:layout_width="@dimen/none"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/black_list"
            android:gravity="center"/>
    </LinearLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="@dimen/none"
        android:layout_weight="1"/>
</LinearLayout>